--- a/style.css
+++ b/style.css
@@ -235,6 +235,7 @@ a:hover{
  .btn-container {
    display: flex;
    justify-content: center;
+   margin-top: 1rem;
    gap: 1rem;
  }
  
@@ -445,3 +446,32 @@ a:hover{
  footer p {
    text-align: center;
  }
+ body {
+   font-family: Arial, sans-serif;
+}
+
+.content {
+   padding: 20px;
+   height: 1500px; 
+}
+
+/* Go to Top Button */
+#goTopBtn {
+   display: none; 
+   position: fixed; 
+   bottom: 20px; 
+   right: 30px; 
+   z-index: 99; 
+   border: none; 
+   outline: none; 
+   background-color: #555; 
+   color: white; 
+   cursor: pointer; 
+   padding: 15px; 
+   border-radius: 10px; 
+   font-size: 18px; 
+}
+
+#goTopBtn:hover {
+   background-color: #333;
+}
